--- a/CreditProcessorService/Properties/launchSettings.json
+++ b/CreditProcessorService/Properties/launchSettings.json
@@ -2,6 +2,7 @@
   "profiles": {
     "CreditWalletService": {
       "commandName": "Project",
+      "applicationUrl": "http://localhost:5000/",
       "environmentVariables": {
         "DOTNET_ENVIRONMENT": "Development"
       },
