change topic offset reset to Latest

--- a/CreditProcessorService/appsettings.json
+++ b/CreditProcessorService/appsettings.json
@@ -5,17 +5,11 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "Producer": {
-    "BootstrapServers": "localhost:9092",
-    "ClientId": "CreditWalletService",
-    "TransactionalId": "CreditWalletService",
-    "EnableIdempotence": true
-  },
   "Consumer": {
     "BootstrapServers": "localhost:9092",
     "ClientId": "CreditWalletService",
     "GroupId": "CreditWalletService",
-    "AutoOffsetReset": "Earliest",
+    "AutoOffsetReset": "Latest",
     "EnableAutoCommit": true,
     "AutoCommitIntervalMs": 5000,
     "EnableAutoOffsetStore": false
